--- a/views/show.erb
+++ b/views/show.erb
@@ -11,13 +11,12 @@
         <h1>メモアプリ</h1>
     </div>
     <div>
-        <h2><%=@title%></h2>
-        <p><%=@content%></p>
+        <h2><%=@hash["title"]%></h2>
+        <p><%=@hash["content"]%></p>
     </div>
     </form>
     <div>
     <a href='/edit'><input type="submit" value="変更"></a>
-    <input type="hidden" name="_method" value="削除">
     <input type="submit" value="削除">
     </div>
     
