乱数でtitleとcontentを管理

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -6,6 +6,22 @@
     <title>メモアプリ</title>
 </head>
 <body>
-    <h1>メモアプリ</h1>
+    <div>
+        <h1>メモアプリ</h1>
+    </div>
+    <form action="/memos/<%=@id%>/edit" method="post">
+    <div>
+        <label for="title">タイトル</label><br>
+        <textarea type="text" name="title" id="title" cols="20" rows="1"><%=@memo["title"]%></textarea><br>
+    </div>
+    <div>
+        <label for="content">内容</label><br>
+        <textarea type="text" name="content" id="content" cols="20" rows="10"><%=@memo["content"]%></textarea><br>
+    </div>
+    <div>
+        <input type="hidden" name="_method" value="PATCH">
+        <input type="submit" value="変更">
+    </div>
+    </form>
 </body>
 </html>
