--- a/views/new.erb
+++ b/views/new.erb
@@ -10,7 +10,7 @@
         <h1>メモアプリ</h1>
     </div>
     <div>
-    <form action="/top" method="post">
+    <form action="/memos" method="post">
         <label for="title">タイトル</label><br>
         <textarea type="text" name="title" id="title" cols="20" rows="1"></textarea><br>
     </div>
