--- a/views/top.erb
+++ b/views/top.erb
@@ -12,7 +12,9 @@
     <div>
         <a href = '/new'><input type="submit" value="追加"></a>
         <ul>
-            <a href='/top/<%=@title%>'><li><%=@title%></li></a>
+            <% @memos.each do |key, memo| %>
+               <a href='/memos/<%=key%>/details'><li><%=memo["title"]%></li></a>
+            <% end %>
         </ul>
         </form>
     </div>
