--- a/views/show.erb
+++ b/views/show.erb
@@ -14,8 +14,11 @@
         <p><%=@memo["content"]%></p>
     </div>
     <div>
-    <a href='/memos/<%=@id%>/edit'><input type="submit" value="編集"></a>
-    <input type="submit" value="削除">
+    <a href='/memos/<%=@id%>/edit'><input type="submit" value="編集"></a><br>
+    <form method="post" action="/memos/<%=@id%>">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" value="削除">
+    </form>
     </div>
     
 </body>
